--- a/style.css
+++ b/style.css
@@ -30,10 +30,15 @@ header {
     text-align: center;
 }
 
+h1 {
+    text-align: center;
+    font-size: 24px;
+}
+
 /* corps */
 
-body {
-    margin: 1rem 0;
+html, body {
+    margin: 1rem 0 0;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -58,31 +63,55 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: #f6f6f6;
+    padding-bottom: 2rem;
+    text-align: center;
+    
 }
 
 .explorer p {
     font-weight:lighter;
-    font-size:larger;
+    margin: 0 0 2rem;
 }
 
 .button-explorer {
     cursor:pointer;
     border-radius: 30px;
-    padding: 0.7rem;
+    padding: 0.9rem;
     background-color: #de6eda;
-    box-shadow: inset 0 0 5px 10px #a55cdb;
+    box-shadow: inset 0 0 2em 0px #a55cdb;
     color: white;
+    border: none;
+    font-size: 1rem;
+}
+
+.explorer h1 {
+    margin: 1.5rem 1.5rem 0;
+    padding: 1rem;
+}
+
+/* fonctionnement */
+
+.fonctionnement {
+    display: flex;
+    justify-content:space-around;
+}
+
+.fonctionnement-card {
+    display: flex;
+    background-color: #f6f6f6;
+    border-radius: 20px;
+    width: 15rem;
+    padding: 1rem 1rem 1rem 0;
+    justify-content: space-around;
+}
+
+.titre-fonctionnement {
+    padding: 1rem;
 }
 
 @media (max-width: 768px) {
-    .explorer h1 {
-        text-align: center;
-        padding: 0 3rem 0;
-        margin-bottom: 0;
-    }
-
-    .explorer p {
-        text-align: center;
+    .titre-fonctionnement {
+        text-align: left;
     }
 }
 
@@ -117,8 +146,6 @@ footer img {
 
 @media (min-width: 768px) {
     footer {
-        display: flex;
         align-items: center;
     }
 }
-
