--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
 $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $third-color: #99E2D0;
+
+.button-explorer {
+    background-color: $secondary-color;
+}
