--- a/style.css
+++ b/style.css
@@ -1,3 +1,171 @@
+/* police */
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('Roboto-Regular.eot');
+  src: url('Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+      url('Roboto-Regular.woff2') format('woff2'),
+      url('Roboto-Regular.woff') format('woff'),
+      url('Roboto-Regular.ttf') format('truetype'),
+      url('Roboto-Regular.svg#Roboto-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Shrikhand';
+  src: url('Shrikhand-Regular.eot');
+  src: url('Shrikhand-Regular.eot?#iefix') format('embedded-opentype'),
+      url('Shrikhand-Regular.woff2') format('woff2'),
+      url('Shrikhand-Regular.woff') format('woff'),
+      url('Shrikhand-Regular.ttf') format('truetype'),
+      url('Shrikhand-Regular.svg#Shrikhand-Regular') format('svg');
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+
+header {
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+  font-size: 24px;
+}
+
+/* corps */
+
+html, body {
+  margin: 1rem 0 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+/* localisation */
+
+.localisation {
+  display: flex;
+  justify-content: center;
+  background-color: #eaeaea;
+  margin-top: 0.5rem;
+  box-shadow: inset 0 3px 4px #cfcfcf;
+}
+
+.localisation p {
+  margin: 1rem; 
+}
+
+/* explorer */
+
+.explorer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f6f6f6;
+  padding-bottom: 2rem;
+  text-align: center;
+}
+
+.explorer p {
+  font-weight:lighter;
+  margin: 0 0 2rem;
+}
+
 .button-explorer {
+  cursor:pointer;
+  border-radius: 30px;
+  padding: 0.9rem;
   background-color: #FF79DA;
-}/*# sourceMappingURL=style.css.map */
+  box-shadow: inset 0 0 2rem 0 #a55cdb;
+  color: white;
+  border: none;
+  font-size: 1rem;
+}
+
+.explorer h1 {
+  margin: 1.5rem 1.5rem 0;
+  padding: 1rem;
+}
+
+/* fonctionnement */
+
+.fonctionnement {
+  display: flex;
+  justify-content:space-around;
+}
+
+.fonctionnement-card {
+  display: flex;
+  background-color: #f6f6f6;
+  border-radius: 30px;
+  padding: 1rem 1rem 1rem 0;
+  justify-content: space-around;
+  width: 20rem;
+  box-shadow: 0.5rem 0.5rem 0.5rem #eaeaea;
+}
+
+.fonctionnement :hover {
+  background-color: #F5edff;
+  cursor: pointer;
+}
+
+.titre-fonctionnement {
+  padding: 1rem;
+}
+
+@media (max-width: 768px) {
+  .titre-fonctionnement {
+      text-align: left;
+  }
+
+  .fonctionnement {
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+  }
+}
+
+/* restaurants */
+
+.restaurants img {
+  height: 30px;
+  width: 30px;
+}
+
+/* pied de page */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #353535;
+  color: white;
+  height: 12rem;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
+footer img {
+  filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(310deg) brightness(107%) contrast(101%);
+  height: 17px;
+}
+
+.footer-line {
+  padding: 0.3rem;
+  margin-left: 1rem;
+}
+
+.logo-footer {
+  padding: 1rem 0;
+}
+
+@media (min-width: 768px) {
+  footer {
+      align-items: center;
+  }
+} 
+
+/*# sourceMappingURL=style.css.map */
