--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ html, body {
 .button-explorer {
   cursor:pointer;
   border-radius: 30px;
-  padding: 0.9rem;
+  padding: 1.2rem;
   background-color: #FF79DA;
-  box-shadow: inset 0 0 2rem 0 #a55cdb;
+  box-shadow: inset 0 0 2rem 1rem #a55cdb;
   color: white;
   border: none;
   font-size: 1rem;
@@ -93,6 +93,7 @@ html, body {
 .fonctionnement {
   display: flex;
   justify-content:space-around;
+  padding-bottom: 2rem;
 }
 
 .fonctionnement-card {
@@ -114,6 +115,18 @@ html, body {
   padding: 1rem;
 }
 
+.number {
+  position: absolute;
+  margin-left: -20rem;
+  border-radius: 50%;
+  background-color: #a55cdb;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  color: white;
+}
+
 @media (max-width: 768px) {
   .titre-fonctionnement {
       text-align: left;
@@ -124,13 +137,64 @@ html, body {
     flex-flow: column wrap;
     align-content: center;
   }
+  .fonctionnement-card {
+    display: flex;
+    align-content: space-between;
+    margin: 1rem;
+  }
 }
 
 /* restaurants */
 
 .restaurants img {
-  height: 30px;
-  width: 30px;
+    border-radius: 5px 5px 0 0;
+    max-width: 400px;
+    width: 100%;
+    max-height: 250px;
+    object-fit: cover;
+}
+
+.restaurants {
+  background-color: #f6f6f6;
+  display: flex;
+  flex-direction: row;
+}
+
+.titre-restaurant {
+  background-color: #f6f6f6;
+  margin-bottom: 0;
+  padding: 2rem;
+}
+
+.restaurant-card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px 5px 0 0;
+  line-height: normal;
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.container h2 {
+  font-size:large;
+}
+
+.restaurant-card :hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+@media (max-width: 768px) {
+  .titre-restaurant {
+      text-align: left;
+  }
+
+  .restaurants {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* pied de page */
