--- a/sass/style2.scss
+++ b/sass/style2.scss
@@ -6,7 +6,7 @@ header {
   text-align: center;
 }
 
-title {
+.title {
   text-align: center;
   font-size: 24px;
 }
@@ -20,8 +20,12 @@ html, body {
 
 /* header */
 
-.image-restaurant {
-  width: 20px;
+.restaurant-image {
+  border-radius: 5px 5px 0px 0px;
+  max-width: 400px;
+  width: 100%;
+  max-height: 250px;
+  object-fit: cover;
 }
 
 /* bouton commander */
