--- a/sass/style.css
+++ b/sass/style.css
@@ -56,13 +56,14 @@
     -webkit-transform: rotate(360deg);
   }
 }
-header {
-  text-align: center;
-}
-
 h1 {
   text-align: center;
   font-size: 24px;
+}
+
+/* header */
+header {
+  text-align: center;
 }
 
 /* corps */
