--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,13 +45,15 @@
   }
 }
 
-header {
-  text-align: center;
-}
-
 h1 {
   text-align: center;
   font-size: 24px;
+}
+
+/* header */
+
+header {
+  text-align: center;
 }
 
 /* corps */
