--- a/sass/outils/_variables.scss
+++ b/sass/outils/_variables.scss
@@ -3,8 +3,9 @@ $primary-color: #a55cdb;
 $secondary-color: #FF79DA;
 $third-color: #99E2D0;
 $background-color: #f6f6f6;
+$background-localisation: #ebebeb;
+$background-footer: #353535;
 $fonctionnement-hover: #F5edff;
 $font-color: rgb(59, 34, 34);
 $shadow-color: #eaeaea;
-$background-footer: #353535;
 $nouveau-font: #028E6D;
