--- a/sass/style.scss
+++ b/sass/style.scss
@@ -45,11 +45,6 @@
   }
 }
 
-h1 {
-  text-align: center;
-  font-size: 24px;
-}
-
 /* header */
 
 header {
@@ -63,14 +58,18 @@ html, body {
   font-family: 'Roboto', sans-serif;
 }
 
+h1 {
+  text-align: center;
+  font-size: 24px;
+}
+
 /* localisation */
 
 .localisation {
   display: flex;
   justify-content: center;
-  background-color: $background-color;
+  background-color: $background-localisation;
   margin-top: 0.5rem;
-  box-shadow: inset 0px 3px 4px $background-color;
 }
 
 .localisation p {
@@ -193,12 +192,13 @@ html, body {
 .restaurant-card {
   box-shadow: 0px 4px 8px $shadow-color;
   border-radius: 2rem;
+  background-color: white;
 }
 
 .image p {
   position: absolute;
   z-index: 1;
-  margin-left: 13rem;
+  margin-left: 18rem;
   background-color: $third-color;
   padding: 0.4rem;
   border-radius: 4px;
@@ -212,6 +212,11 @@ html, body {
 
 .container h2 {
   font-size: large;
+}
+
+.container img {
+  height: 16px;
+  width: 16px;
 }
 
 .restaurant-card :hover {
