--- a/sass/style2.scss
+++ b/sass/style2.scss
@@ -11,9 +11,6 @@ html, body {
 
 h1 {
   font-family: 'Shrikhand';
-  font-size: xx-large;
-  font-style: italic;
-  font-weight: bolder;
   margin-left: 1rem;
 }
 
@@ -26,13 +23,20 @@ h2 {
   margin-bottom: 0;
 }
 
-h2:before {
+h2::after {
   content: "";
   position: absolute;
-  width: 10%;
+  width: 2.5%;
   bottom: 0;
-  left: 0%;
+  left: 0;
   border-bottom: 3px solid $third-color;
+}
+
+h4 {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -1.5rem;
+  margin-right: 1rem;
 }
 
 /* header */
@@ -48,13 +52,16 @@ header {
   padding-bottom: 2rem;
 }
 
+.left-arrow {
+  cursor: pointer;
+}
+
 /* menu */
 
 .menu {
   display: flex;
   flex-direction: column;
   background-color: $background-color;
-  max-width: 400px;
   gap: 1rem;
 }
 
@@ -90,16 +97,36 @@ header {
   margin-right: 1rem;
 }
 
+@media (max-width: 768px) {
+  .menu {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 769px) {
+  .restaurant-image {
+    max-height: 600px;
+  }
+}
+
 /* bouton commander */
+
+.section-explorer {
+  background-color: $background-color;
+  display: flex;
+  justify-content: center;
+}
 
 .button-explorer {
   cursor: pointer;
   border-radius: 30px;
-  padding: 1.2rem;
+  padding: 1.2rem 4rem;
   box-shadow: inset 0rem 0rem 2rem 1rem $primary-color-contrast;
   color: white;
   border: none;
   font-size: 1rem;
+  margin: 2rem 0rem 3rem;
+  background-color: $secondary-color;
 }
 
 /* pied de page */
