--- a/sass/style.css
+++ b/sass/style.css
@@ -16,6 +16,18 @@
   font-style: italic;
   font-display: swap;
 }
+.chargement::before {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+  display: none;
+  z-index: 9999;
+}
+
 .chargement {
   /* création du loader */
   border-top: 10px solid #a55cdb;
