--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,6 +2,15 @@
 
 @import './base/fonts';
 
+.chargement::before {
+  position: fixed;
+  width: 100%;
+  top:0; left:0; right:0; bottom:0;
+  background-color: rgba(255,255,255,0.7);
+  display: none;
+  z-index: 9999;
+}
+
 .chargement {
   /* création du loader */
 
