--- a/sass/style2.css
+++ b/sass/style2.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* police */
 @font-face {
   font-family: "Roboto";
@@ -24,6 +25,9 @@ html, body {
 h1 {
   font-family: "Shrikhand";
   margin-left: 1rem;
+  font-weight: bold;
+  font-style: italic;
+  font-size: xx-large;
 }
 
 h2 {
@@ -38,7 +42,7 @@ h2 {
 h2::after {
   content: "";
   position: absolute;
-  width: 2.5%;
+  width: 2.5rem;
   bottom: 0;
   left: 0;
   border-bottom: 3px solid #99E2D0;
@@ -113,19 +117,20 @@ header a {
   margin-right: 1rem;
 }
 
-.icon {
+/* coeur */
+svg {
+  overflow: visible;
   cursor: pointer;
   margin-top: 1rem;
   margin-right: 2rem;
 }
 
-svg {
-  overflow: visible;
-}
-
 path {
+  /* décalage de la position de départ des pointillées */
   stroke-dashoffset: 0;
+  /* contrôle le motif et l'espacement entre les segments utilisés pour tracer le contour */
   stroke-dasharray: 1550;
+  /* modifie l'origine du repère */
   transform-origin: center;
 }
 
@@ -134,17 +139,13 @@ path {
   left: 0;
   right: 0;
   z-index: -1;
+  /* contour */
   stroke: none;
 }
 
 .heart-main:hover path {
-  -webkit-animation: stroke-animation 2s ease-in-out forwards;
-          animation: stroke-animation 2s ease-in-out forwards;
-}
-
-.heart-main:hover ~ .heart-background path {
-  -webkit-animation: fade-animation 2s ease-in-out forwards;
-          animation: fade-animation 2s ease-in-out forwards;
+  -webkit-animation: stroke-animation 2.5s ease-in-out forwards;
+          animation: stroke-animation 2.5s ease-in-out forwards;
 }
 
 @-webkit-keyframes stroke-animation {
@@ -196,42 +197,6 @@ path {
     fill: pink;
   }
 }
-@-webkit-keyframes fade-animation {
-  70% {
-    fill: transparent;
-    transform: scale(1);
-  }
-  80% {
-    fill: lightpink;
-    transform: scale(1.1);
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    transform: scale(2.5);
-    opacity: 0;
-  }
-}
-@keyframes fade-animation {
-  70% {
-    fill: transparent;
-    transform: scale(1);
-  }
-  80% {
-    fill: lightpink;
-    transform: scale(1.1);
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    transform: scale(2.5);
-    opacity: 0;
-  }
-}
 @media (max-width: 768px) {
   .menu {
     max-width: 768px;
@@ -259,6 +224,10 @@ path {
   font-size: 1rem;
   margin: 2rem 0rem 3rem;
   background-color: #FF79DA;
+}
+
+.button-explorer:hover {
+  background-color: rgba(255, 121, 218, 0.7);
 }
 
 /* pied de page */
