--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -3,12 +3,12 @@
 
 @font-face {
     font-family: 'Roboto';
-    src: url('Roboto-Regular.eot');
-    src: url('Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-        url('Roboto-Regular.woff2') format('woff2'),
-        url('Roboto-Regular.woff') format('woff'),
-        url('Roboto-Regular.ttf') format('truetype'),
-        url('Roboto-Regular.svg#Roboto-Regular') format('svg');
+    src: url('./Roboto/Roboto-Regular.eot');
+    src: url('./Roboto/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+         url('./Roboto/Roboto-Regular.woff2') format('woff2'),
+         url('./Roboto/Roboto-Regular.woff') format('woff'),
+         url('./Roboto/Roboto-Regular.ttf') format('truetype'),
+         url('./Roboto/Roboto-Regular.svg#Roboto-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -16,12 +16,12 @@
   
   @font-face {
     font-family: 'Shrikhand';
-    src: url('Shrikhand-Regular.eot');
-    src: url('Shrikhand-Regular.eot?#iefix') format('embedded-opentype'),
-        url('Shrikhand-Regular.woff2') format('woff2'),
-        url('Shrikhand-Regular.woff') format('woff'),
-        url('Shrikhand-Regular.ttf') format('truetype'),
-        url('Shrikhand-Regular.svg#Shrikhand-Regular') format('svg');
+    src: url('./Shrikhand/Shrikhand-Regular.eot');
+    src: url('./Shrikhand/Shrikhand-Regular.eot?#iefix') format('embedded-opentype'),
+         url('./Shrikhand/Shrikhand-Regular.woff2') format('woff2'),
+         url('./Shrikhand/Shrikhand-Regular.woff') format('woff'),
+         url('./Shrikhand/Shrikhand-Regular.ttf') format('truetype'),
+         url('./Shrikhand/Shrikhand-Regular.svg#Shrikhand-Regular') format('svg');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
