--- a/sass/style-a-la-francaise.css
+++ b/sass/style-a-la-francaise.css
@@ -30,31 +30,6 @@ h1 {
   font-size: xx-large;
 }
 
-h2 {
-  margin-left: 1rem;
-  font-weight: lighter;
-  font-size: medium;
-  padding-bottom: 1rem;
-  position: relative;
-  margin-bottom: 0;
-}
-
-h2::after {
-  content: "";
-  position: absolute;
-  width: 2.5rem;
-  bottom: 0;
-  left: 0;
-  border-bottom: 3px solid #99E2D0;
-}
-
-h4 {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: -1.5rem;
-  margin-right: 1rem;
-}
-
 /* header */
 header {
   display: grid;
@@ -107,14 +82,86 @@ header a {
   margin-bottom: -2.5rem;
 }
 
-.menu-list {
-  margin-left: 1rem;
-  line-height: 0.5rem;
+.row-plat {
   box-shadow: 0px 4px 8px #eaeaea;
-  border-radius: 2rem;
-  background-color: white;
-  padding-left: 1rem;
+  line-height: 1rem;
+}
+
+h3 {
+  font-weight: 900;
+  padding-top: 0.5rem;
+}
+
+h4 {
+  font-weight: 100;
   margin-right: 1rem;
+  margin-top: -0.5rem;
+}
+
+/* soulignement */
+h2 {
+  margin-left: 1rem;
+  font-weight: lighter;
+  font-size: medium;
+  padding-bottom: 1rem;
+  position: relative;
+  margin-bottom: 0;
+}
+
+h2::after {
+  content: "";
+  position: absolute;
+  width: 2.5rem;
+  bottom: 0;
+  left: 0;
+  border-bottom: 3px solid #99E2D0;
+}
+
+/* coche */
+label:after {
+  content: "✓";
+  position: absolute;
+  height: 100%;
+  font-size: 2em;
+  background: #99E2D0;
+  width: 2em;
+  text-align: center;
+  line-height: 3em;
+  border-radius: 0 15px 15px 0;
+  color: white;
+  right: -5em;
+  transition: 0.2s;
+}
+
+:checked + label:after {
+  right: 0;
+}
+
+label {
+  transition: 0.3s;
+  background: white;
+  border-radius: 15px;
+}
+
+.menu-list {
+  display: flex;
+  padding: 0rem 5rem 0rem 1rem;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  height: 6rem;
+}
+
+.hidden {
+  position: absolute;
+  right: 100vw;
+}
+
+.column-2 {
+  margin-left: auto;
+  padding-left: 2rem;
 }
 
 /* coeur */
@@ -263,4 +310,4 @@ footer img {
     align-items: center;
   }
 }
-/*# sourceMappingURL=style2.css.map *//*# sourceMappingURL=style2.css.map */
+/*# sourceMappingURL=style-a-la-francaise.css.map *//*# sourceMappingURL=style-a-la-francaise.css.map */
