--- a/sass/style.css
+++ b/sass/style.css
@@ -110,6 +110,10 @@ h1 {
   font-size: 1rem;
 }
 
+.button-explorer:hover {
+  background-color: rgba(255, 121, 218, 0.7);
+}
+
 .explorer h1 {
   margin: 1.5rem 1.5rem 0rem;
   padding: 1rem;
@@ -199,6 +203,8 @@ h1 {
   box-shadow: 0px 4px 8px #eaeaea;
   border-radius: 2rem;
   background-color: white;
+  text-decoration: none;
+  color: black;
 }
 
 .image p {
