--- a/sass/style.scss
+++ b/sass/style.scss
@@ -103,6 +103,10 @@ h1 {
   font-size: 1rem;
 }
 
+.button-explorer:hover {
+  background-color: rgba(255,121,218,0.7);
+}
+
 .explorer h1 {
   margin: 1.5rem 1.5rem 0rem;
   padding: 1rem;
@@ -193,6 +197,8 @@ h1 {
   box-shadow: 0px 4px 8px $shadow-color;
   border-radius: 2rem;
   background-color: white;
+  text-decoration: none;
+  color: black;
 }
 
 .image p {
