--- a/sass/style-a-la-francaise.scss
+++ b/sass/style-a-la-francaise.scss
@@ -86,6 +86,110 @@ h4 {
   margin-top: -0.5rem;
 }
 
+/* apparition progressive du menu */
+
+#row-1 {
+  opacity:0;
+  -moz-animation: anim 100ms linear forwards 200ms;
+  -webkit-animation: anim 100ms linear forwards 200ms;
+  -o-animation: anim 100ms linear forwards 200ms;
+  -ms-animation: anim 100ms linear forwards 200ms;
+  animation: anim 100ms linear forwards 200ms;
+}
+
+#row-2 {
+  opacity:0;
+  -moz-animation: anim 200ms linear forwards 300ms;
+  -webkit-animation: anim 200ms linear forwards 300ms;
+  -o-animation: anim 200ms linear forwards 300ms;
+  -ms-animation: anim 200ms linear forwards 300ms;
+  animation: anim 200ms linear forwards 300ms;
+}
+
+#row-3 {
+  opacity:0;
+  -moz-animation: anim 300ms linear forwards 400ms;
+  -webkit-animation: anim 300ms linear forwards 400ms;
+  -o-animation: anim 300ms linear forwards 400ms;
+  -ms-animation: anim 300ms linear forwards 400ms;
+  animation: anim 300ms linear forwards 400ms;
+}
+
+#row-4 {
+  opacity:0;
+  -moz-animation: anim 400ms linear forwards 500ms;
+  -webkit-animation: anim 400ms linear forwards 500ms;
+  -o-animation: anim 400ms linear forwards 500ms;
+  -ms-animation: anim 400ms linear forwards 500ms;
+  animation: anim 400ms linear forwards 500ms;
+}
+
+#row-5 {
+  opacity:0;
+  -moz-animation: anim 500ms linear forwards 600ms;
+  -webkit-animation: anim 500ms linear forwards 600ms;
+  -o-animation: anim 500ms linear forwards 600ms;
+  -ms-animation: anim 500ms linear forwards 600ms;
+  animation: anim 500ms linear forwards 600ms;
+}
+
+#row-6 {
+  opacity:0;
+  -moz-animation: anim 600ms linear forwards 700ms;
+  -webkit-animation: anim 600ms linear forwards 700ms;
+  -o-animation: anim 600ms linear forwards 700ms;
+  -ms-animation: anim 600ms linear forwards 700ms;
+  animation: anim 600ms linear forwards 700ms;
+}
+
+#row-7 {
+  opacity:0;
+  -moz-animation: anim 700ms linear forwards 800ms;
+  -webkit-animation: anim 700ms linear forwards 800ms;
+  -o-animation: anim 700ms linear forwards 800ms;
+  -ms-animation: anim 700ms linear forwards 800ms;
+  animation: anim 700ms linear forwards 800ms;
+}
+
+#row-8 {
+  opacity:0;
+  -moz-animation: anim 800ms linear forwards 900ms;
+  -webkit-animation: anim 800ms linear forwards 900ms;
+  -o-animation: anim 800ms linear forwards 900ms;
+  -ms-animation: anim 800ms linear forwards 900ms;
+  animation: anim 800ms linear forwards 900ms;
+}
+
+#row-9 {
+  opacity:0;
+  -moz-animation: anim 900ms linear forwards 1000ms;
+  -webkit-animation: anim 900ms linear forwards 1000ms;
+  -o-animation: anim 900ms linear forwards 1000ms;
+  -ms-animation: anim 900ms linear forwards 1000ms;
+  animation: anim 900ms linear forwards 1000ms;
+}
+
+@-moz-keyframes anim {
+  0%  {opacity:0;}
+  100% {opacity:1;}
+}
+@-webkit-keyframes anim {
+  0%  {opacity:0;}
+  100% {opacity:1;}
+}
+@-o-keyframes anim {
+  0%  {opacity:0;}
+  100% {opacity:1;}
+}
+@-ms-keyframes anim {
+  0%  {opacity:0;}
+  100% {opacity:1;}
+}
+@keyframes anim {
+  0%  {opacity:0;}
+  100% {opacity:1;}
+}
+
 /* soulignement */
 
 h2 {
@@ -128,7 +232,7 @@ label:after {
 }
 
 label{
-  transition:0.3s;
+  transition:0.200ms;
   background: white;
   border-radius: 15px;
 }
@@ -182,7 +286,7 @@ path {
 }
 
 .heart-main:hover path {
-  animation: stroke-animation 2.5s ease-in-out forwards;
+  animation: stroke-animation 2.200ms ease-in-out forwards;
 }
 
 @keyframes stroke-animation {
