--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,7 @@
   position: absolute;
   top:0; left:0; right:0; bottom:0;
   animation-duration: 1000ms 150ms;
+  background-image: url(http://lorempixel.com/500/200/nature/1/);
 }
 
   /* animation du loader */
@@ -35,7 +36,6 @@
         transform: rotate(360deg);
   }
 }
-
 @-webkit-keyframes spin {
   0% {
       -webkit-transform: rotate(0deg);
