loading spinner ok

--- a/sass/style.css
+++ b/sass/style.css
@@ -16,6 +16,30 @@
   font-style: italic;
   font-display: swap;
 }
+.chargement-background {
+  animation: fadeIn 5s;
+  -webkit-animation: fadeIn 5s;
+  -moz-animation: fadeIn 5s;
+  -o-animation: fadeIn 5s;
+  -ms-animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .chargement {
   /* création du loader */
   border-top: 10px solid #a55cdb;
@@ -35,9 +59,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  -webkit-animation-duration: 1000ms 150ms;
-          animation-duration: 1000ms 150ms;
-  background-image: url(http://lorempixel.com/500/200/nature/1/);
 }
 
 /* animation du loader */
