--- a/sass/style.css
+++ b/sass/style.css
@@ -17,11 +17,11 @@
   font-display: swap;
 }
 .chargement-background {
-  animation: fadeIn 5s;
-  -webkit-animation: fadeIn 5s;
-  -moz-animation: fadeIn 5s;
-  -o-animation: fadeIn 5s;
-  -ms-animation: fadeIn 5s;
+  animation: fadeIn 3000ms;
+  -webkit-animation: fadeIn 3000ms;
+  -moz-animation: fadeIn 3000ms;
+  -o-animation: fadeIn 3000ms;
+  -ms-animation: fadeIn 3000ms;
 }
 
 @keyframes fadeIn {
@@ -49,8 +49,8 @@
   border-radius: 50%;
   width: 100px;
   height: 100px;
-  -webkit-animation: spin 1500ms linear;
-  animation: spin 1500ms linear;
+  -webkit-animation: spin 3000ms linear;
+  animation: spin 3000ms linear;
   transform: scale(0);
   /* placement au milieu de la page */
   margin: auto;
@@ -168,9 +168,15 @@ h1 {
   height: 15px;
   padding: 2.5px;
   color: #3b2222;
+  padding-bottom: 0.4rem;
 }
 
 .fonctionnement :hover {
+  background-color: #F5edff;
+  cursor: pointer;
+}
+
+.fonctionnement-card svg :hover {
   background-color: #F5edff;
   cursor: pointer;
 }
@@ -227,17 +233,21 @@ h1 {
   background-color: white;
   text-decoration: none;
   color: black;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  position: relative;
 }
 
 .image p {
   position: absolute;
   z-index: 1;
-  margin-left: 18rem;
   background-color: #99E2D0;
   padding: 0.4rem;
   border-radius: 4px;
   font-weight: bold;
   color: #028E6D;
+  color: #028E6D;
+  right: 10px;
 }
 
 .container {
@@ -257,6 +267,130 @@ h1 {
   cursor: pointer;
 }
 
+/* coeur */
+.icon {
+  cursor: pointer;
+  position: absolute;
+  right: 20px;
+  bottom: 3rem;
+}
+
+svg {
+  overflow: visible;
+}
+
+path {
+  /* décalage de la position de départ des pointillées */
+  stroke-dashoffset: 0;
+  /* contrôle le motif et l'espacement entre les segments utilisés pour tracer le contour */
+  stroke-dasharray: 1550;
+  /* modifie l'origine du repère */
+  transform-origin: center;
+}
+
+.heart-background {
+  position: absolute;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  /* contour */
+  stroke: none;
+}
+
+.heart-main:hover path {
+  -webkit-animation: stroke-animation 2s ease-in-out forwards;
+  animation: stroke-animation 2s ease-in-out forwards;
+}
+
+.heart-main:hover ~ .heart-background path {
+  -webkit-animation: fade-animation 2s ease-in-out forwards;
+  animation: fade-animation 2s ease-in-out forwards;
+}
+
+@-webkit-keyframes stroke-animation {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  30% {
+    stroke-dashoffset: 1550;
+  }
+  60% {
+    stroke-dashoffset: 3100;
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+  }
+  90% {
+    transform: scale(1);
+  }
+  100% {
+    stroke-dashoffset: 3100;
+    fill: violet;
+  }
+}
+@keyframes stroke-animation {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  30% {
+    stroke-dashoffset: 1550;
+  }
+  60% {
+    stroke-dashoffset: 3100;
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+  }
+  90% {
+    transform: scale(1);
+  }
+  100% {
+    stroke-dashoffset: 3100;
+    fill: violet;
+  }
+}
+@-webkit-keyframes fade-animation {
+  70% {
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
+  }
+}
+@keyframes fade-animation {
+  70% {
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
+  }
+}
 @media (max-width: 768px) {
   .titre-restaurant {
     text-align: left;
