--- a/sass/style-a-la-francaise.css
+++ b/sass/style-a-la-francaise.css
@@ -168,7 +168,7 @@ h4 {
     opacity: 1;
   }
 }
-/* soulignement */
+/* soulignement des titres h2 */
 h2 {
   margin-left: 1rem;
   font-weight: lighter;
@@ -235,11 +235,14 @@ label {
 }
 
 /* coeur */
-svg {
-  overflow: visible;
+.icon {
   cursor: pointer;
   margin-top: 1rem;
   margin-right: 2rem;
+}
+
+svg {
+  overflow: visible;
 }
 
 path {
@@ -261,8 +264,13 @@ path {
 }
 
 .heart-main:hover path {
-  -webkit-animation: stroke-animation 2.2ms ease-in-out forwards;
-          animation: stroke-animation 2.2ms ease-in-out forwards;
+  -webkit-animation: stroke-animation 2s ease-in-out forwards;
+  animation: stroke-animation 2s ease-in-out forwards;
+}
+
+.heart-main:hover ~ .heart-background path {
+  -webkit-animation: fade-animation 2s ease-in-out forwards;
+  animation: fade-animation 2s ease-in-out forwards;
 }
 
 @-webkit-keyframes stroke-animation {
@@ -278,7 +286,7 @@ path {
     transform: scale(1);
   }
   80% {
-    fill: pink;
+    fill: violet;
     transform: scale(1.1);
   }
   90% {
@@ -286,10 +294,9 @@ path {
   }
   100% {
     stroke-dashoffset: 3100;
-    fill: pink;
+    fill: violet;
   }
 }
-
 @keyframes stroke-animation {
   0% {
     stroke-dashoffset: 0;
@@ -303,7 +310,7 @@ path {
     transform: scale(1);
   }
   80% {
-    fill: pink;
+    fill: violet;
     transform: scale(1.1);
   }
   90% {
@@ -311,17 +318,43 @@ path {
   }
   100% {
     stroke-dashoffset: 3100;
-    fill: pink;
+    fill: violet;
   }
 }
-@media (max-width: 768px) {
-  .menu {
-    max-width: 768px;
+@-webkit-keyframes fade-animation {
+  70% {
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
   }
 }
-@media (min-width: 769px) {
-  .restaurant-image {
-    max-height: 600px;
+@keyframes fade-animation {
+  70% {
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
   }
 }
 /* bouton commander */
