--- a/sass/style-a-la-francaise.scss
+++ b/sass/style-a-la-francaise.scss
@@ -190,7 +190,7 @@ h4 {
   100% {opacity:1;}
 }
 
-/* soulignement */
+/* soulignement des titres h2 */
 
 h2 {
   margin-left: 1rem;
@@ -260,11 +260,14 @@ label{
 
 /* coeur */
 
-svg {
-  overflow: visible;
+.icon {
   cursor: pointer;
   margin-top: 1rem;
   margin-right: 2rem;
+}
+
+svg {
+  overflow: visible;
 }
 
 path {
@@ -282,11 +285,42 @@ path {
   right: 0;
   z-index: -1;
   /* contour */
-  stroke: none; 
+  stroke: none;
 }
 
 .heart-main:hover path {
-  animation: stroke-animation 2.200ms ease-in-out forwards;
+  -webkit-animation: stroke-animation 2s ease-in-out forwards;
+          animation: stroke-animation 2s ease-in-out forwards;
+}
+
+.heart-main:hover ~ .heart-background path {
+  -webkit-animation: fade-animation 2s ease-in-out forwards;
+          animation: fade-animation 2s ease-in-out forwards;
+}
+
+@-webkit-keyframes stroke-animation {
+  0% {
+    stroke-dashoffset: 0;
+  }
+  30% {
+    stroke-dashoffset: 1550;
+  }
+  60% {
+    stroke-dashoffset: 3100;
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+  }
+  90% {
+    transform: scale(1);
+  }
+  100% {
+    stroke-dashoffset: 3100;
+    fill: violet;
+  }
 }
 
 @keyframes stroke-animation {
@@ -302,7 +336,7 @@ path {
     transform: scale(1);
   }
   80% {
-    fill: pink;
+    fill: violet;
     transform: scale(1.1);
   }
   90% {
@@ -310,19 +344,43 @@ path {
   }
   100% {
     stroke-dashoffset: 3100;
-    fill: pink;
+    fill: violet;
   }
 }
-
-@media (max-width: 768px) {
-  .menu {
-    max-width: 768px;
+@-webkit-keyframes fade-animation {
+  70% {
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
   }
 }
-
-@media (min-width: 769px) {
-  .restaurant-image {
-    max-height: 600px;
+@keyframes fade-animation {
+  70% {
+    fill: transparent;
+    transform: scale(1);
+  }
+  80% {
+    fill: violet;
+    transform: scale(1.1);
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2.5);
+    opacity: 0;
   }
 }
 
