--- a/sass/style-la-palette-du-gout.scss
+++ b/sass/style-la-palette-du-gout.scss
@@ -1,27 +1,27 @@
 @import './outils/variables';
-
 @import './base/fonts';
 
 /* corps */
 
 html, body {
-  margin: 1rem 0rem 0rem;
+  margin: 0.5rem 0rem 0rem;
   font-family: 'Roboto', sans-serif;
 }
 
 h1 {
   font-family: 'Shrikhand';
-  margin-left: 1rem;
   font-weight: bold;
   font-style: italic;
-  font-size: xx-large;
+  font-size: x-large;
 }
 
 /* header */
 
 header {
   display: grid;
-  grid-template-areas: "a b c"
+  grid-template-areas: "a b c";
+  align-content: center;
+  margin-bottom: 0.5rem;
 }
 
 header a {
@@ -32,11 +32,56 @@ header a {
 .title {
   display: flex;
   justify-self: center;
-  padding-bottom: 2rem;
 }
 
 .left-arrow {
   cursor: pointer;
+}
+
+.menu-title {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem 0 1rem;
+  align-items: center;
+}
+
+.image-principale {
+  z-index: 1;
+  height: 250px;
+  & img {
+      height: 100%;
+      object-fit: cover;
+      width: 100%;
+  }
+}
+
+/* coeur */
+
+.heart {
+
+  cursor: pointer;
+
+  & .bg {
+    z-index: 1;
+    position: absolute;
+    font-size: 30px; 
+  }
+  
+  & .no-bg {
+    
+    font-size: 30px;
+    z-index: 0;
+    transform: scale(0);
+    background: linear-gradient($primary-color, $secondary-color);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  
+  &:hover .no-bg {
+    transform-origin: bottom;
+    transform: scale(1);
+    transition: 0.3s;
+  }
 }
 
 /* menu */
@@ -45,45 +90,80 @@ header a {
   display: flex;
   flex-direction: column;
   background-color: $background-color;
-  gap: 1rem;
+  border-radius: 30px 30px 0px 0px;
+  z-index: 2;
+  position: relative;
 }
 
-.menu-title {
+.row-plate {
+  margin: 0.5rem;
+  background-color: white;
+  padding: 1rem;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
-  background-color: $background-color;
-  padding-top: 1rem;
-}
-
-.menu-title img {
-  margin-right: 2rem;
-}
-
-.restaurant-image {
-  width: 100%;
-  object-fit: cover;
-  display: flex;
-  justify-self: center;
-  margin-bottom: - 2.5rem;
-}
-
-.row-plat {
+  border-radius: 15px;
   box-shadow: 0px 4px 8px $shadow-color;
-  line-height: 1rem;
-}
+  overflow: hidden;
+  cursor: pointer;
 
-h3 {
-  font-weight: 900;
-  padding-top: 0.5rem;
-}
+  &__column {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    flex: 1;
+  }
+  
+  &__firstline {
+    margin: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  
+  &__secondline {
+    margin: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
 
-h4 {
-  font-weight: 100;
-  margin-right: 1rem;
-  margin-top: -0.5rem;
+  &__price {
+    font-weight: bold;
+    display: flex;
+    align-self: flex-end;
+  }
+
+  &__box {
+    background-color: $third-color;
+    margin: -1rem -5rem -1rem 1rem;
+    width: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    transition-duration: 250ms;
+  }
+
+  &:hover &__box {
+    margin-right: -1rem;
+  }
+
+  &__wrap {
+    height: 1.4rem;
+    width: 1.4rem;
+    background-color: white;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    border-radius: 50px;
+    transform: rotate(180deg);
+    transition-duration: 250ms;
+  }
+
+  &:hover &__wrap {
+    transform: rotate(0);
+  }
+
+  &__check {
+    color: $third-color;
+  }
 }
 
 /* apparition progressive du menu */
@@ -199,6 +279,7 @@ h2 {
   padding-bottom: 1rem;
   position: relative;
   margin-bottom: 0;
+  text-transform: uppercase;
 }
 
 h2::after {
@@ -211,52 +292,6 @@ h2::after {
 }
 
 /* coche */
-
-label:after {
-  content: "✓";
-  position: absolute;
-  height: 100%;
-  font-size: 2em;
-  background: #99E2D0;
-  width: 2em;
-  text-align: center;
-  line-height: 3em;
-  border-radius: 0 15px 15px 0;
-  color: white;
-  right: -5em;
-  transition: 0.2s;
-}
-
-:checked + label:after {
-  right: 0;
-}
-
-label{
-  transition:0.200ms;
-  background: white;
-  border-radius: 15px;
-}
-
-.menu-list {
-  display: flex;
-  padding: 0rem 5rem 0rem 1rem;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  height: 6rem;
-}
-
-.hidden {
-  position: absolute;
-  right: 100vw;
-}
-
-.column-2 {
-  margin-left: auto;
-  padding-left: 2rem;
-}
 
 /* coeur */
 
