--- a/sass/style-a-la-francaise.css
+++ b/sass/style-a-la-francaise.css
@@ -18,22 +18,23 @@
 }
 /* corps */
 html, body {
-  margin: 1rem 0rem 0rem;
+  margin: 0.5rem 0rem 0rem;
   font-family: "Roboto", sans-serif;
 }
 
 h1 {
   font-family: "Shrikhand";
-  margin-left: 1rem;
   font-weight: bold;
   font-style: italic;
-  font-size: xx-large;
+  font-size: x-large;
 }
 
 /* header */
 header {
   display: grid;
   grid-template-areas: "a b c";
+  align-content: center;
+  margin-bottom: 0.5rem;
 }
 
 header a {
@@ -44,11 +45,54 @@ header a {
 .title {
   display: flex;
   justify-self: center;
-  padding-bottom: 2rem;
 }
 
 .left-arrow {
   cursor: pointer;
+}
+
+.menu-title {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem 0 1rem;
+  align-items: center;
+}
+
+/* image principale */
+.image-principale {
+  z-index: 0;
+  height: 300px;
+}
+.image-principale .image {
+  height: 55%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  position: absolute;
+}
+
+/* coeur */
+.heart {
+  cursor: pointer;
+}
+.heart .bg {
+  z-index: 1;
+  position: absolute;
+  font-size: 30px;
+}
+.heart .no-bg {
+  font-size: 30px;
+  z-index: 0;
+  transform: scale(0);
+  background: linear-gradient(#a55cdb, #FF79DA);
+  -webkit-background-clip: text;
+          background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.heart:hover .no-bg {
+  transform-origin: bottom;
+  transform: scale(1);
+  transition: 0.3s;
 }
 
 /* menu */
@@ -56,118 +100,97 @@ header a {
   display: flex;
   flex-direction: column;
   background-color: #f6f6f6;
-  gap: 1rem;
+  border-radius: 30px 30px 0px 0px;
+  z-index: 1;
+  position: relative;
 }
 
-.menu-title {
+.row-plate {
+  margin: 0.5rem;
+  background-color: white;
+  padding: 1rem;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  border-top-left-radius: 2rem;
-  border-top-right-radius: 2rem;
-  background-color: #f6f6f6;
-  padding-top: 1rem;
-}
-
-.menu-title img {
-  margin-right: 2rem;
-}
-
-.restaurant-image {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  display: flex;
-  justify-self: center;
-  margin-bottom: -2.5rem;
-}
-
-.row-plat {
+  border-radius: 15px;
   box-shadow: 0px 4px 8px #eaeaea;
-  line-height: 1rem;
+  overflow: hidden;
+  cursor: pointer;
+  animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  /* Firefox */
+  -webkit-animation: fadein 2s;
+  /* Safari et Chrome */
+  -o-animation: fadein 2s;
+  /* Opera */
 }
-
-h3 {
-  font-weight: 900;
-  padding-top: 0.5rem;
+.row-plate__column {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  flex: 1;
 }
-
-h4 {
-  font-weight: 100;
-  margin-right: 1rem;
-  margin-top: -0.5rem;
+.row-plate__firstline {
+  margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
-
-/* apparition progressive du menu */
-#row-1 {
-  opacity: 0;
-  -webkit-animation: anim 100ms linear forwards 200ms;
-  animation: anim 100ms linear forwards 200ms;
+.row-plate__secondline {
+  margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
-
-#row-2 {
-  opacity: 0;
-  -webkit-animation: anim 200ms linear forwards 300ms;
-  animation: anim 200ms linear forwards 300ms;
+.row-plate__price {
+  font-weight: bold;
+  display: flex;
+  align-self: flex-end;
 }
-
-#row-3 {
-  opacity: 0;
-  -webkit-animation: anim 300ms linear forwards 400ms;
-  animation: anim 300ms linear forwards 400ms;
+.row-plate__box {
+  background-color: #99E2D0;
+  margin: -1rem -5rem -1rem 1rem;
+  width: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 250ms;
 }
-
-#row-4 {
-  opacity: 0;
-  -webkit-animation: anim 400ms linear forwards 500ms;
-  animation: anim 400ms linear forwards 500ms;
+.row-plate:hover .row-plate__box {
+  margin-right: -1rem;
 }
-
-#row-5 {
-  opacity: 0;
-  -webkit-animation: anim 500ms linear forwards 600ms;
-  animation: anim 500ms linear forwards 600ms;
+.row-plate__wrap {
+  height: 1.4rem;
+  width: 1.4rem;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  transform: rotate(180deg);
+  transition-duration: 250ms;
 }
-
-#row-6 {
-  opacity: 0;
-  -webkit-animation: anim 600ms linear forwards 700ms;
-  animation: anim 600ms linear forwards 700ms;
+.row-plate:hover .row-plate__wrap {
+  transform: rotate(0);
 }
-
-#row-7 {
-  opacity: 0;
-  -webkit-animation: anim 700ms linear forwards 800ms;
-  animation: anim 700ms linear forwards 800ms;
+.row-plate__check {
+  color: #99E2D0;
 }
-
-#row-8 {
-  opacity: 0;
-  -webkit-animation: anim 800ms linear forwards 900ms;
-  animation: anim 800ms linear forwards 900ms;
-}
-
-#row-9 {
-  opacity: 0;
-  -webkit-animation: anim 900ms linear forwards 1000ms;
-  animation: anim 900ms linear forwards 1000ms;
-}
-@-webkit-keyframes anim {
-  0% {
+@keyframes fadein {
+  from {
     opacity: 0;
   }
-  100% {
+  to {
     opacity: 1;
   }
 }
-@keyframes anim {
-  0% {
+@-webkit-keyframes fadein {
+  /* sur Safari et Chrome */
+  from {
     opacity: 0;
   }
-  100% {
+  to {
     opacity: 1;
   }
 }
+
 /* soulignement des titres h2 */
 h2 {
   margin-left: 1rem;
@@ -176,6 +199,7 @@ h2 {
   padding-bottom: 1rem;
   position: relative;
   margin-bottom: 0;
+  text-transform: uppercase;
 }
 
 h2::after {
@@ -188,52 +212,6 @@ h2::after {
 }
 
 /* coche */
-label:after {
-  content: "✓";
-  position: absolute;
-  height: 100%;
-  font-size: 2em;
-  background: #99E2D0;
-  width: 2em;
-  text-align: center;
-  line-height: 3em;
-  border-radius: 0 15px 15px 0;
-  color: white;
-  right: -5em;
-  transition: 0.2s;
-}
-
-:checked + label:after {
-  right: 0;
-}
-
-label {
-  transition: 0.2ms;
-  background: white;
-  border-radius: 15px;
-}
-
-.menu-list {
-  display: flex;
-  padding: 0rem 5rem 0rem 1rem;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  height: 6rem;
-}
-
-.hidden {
-  position: absolute;
-  right: 100vw;
-}
-
-.column-2 {
-  margin-left: auto;
-  padding-left: 2rem;
-}
-
 /* coeur */
 .icon {
   cursor: pointer;
